# NEURO

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
apps/dashboard/: .env.local.example  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/dashboard/src/app/: layout.tsx  page.tsx
apps/dashboard/src/components/: providers.tsx
apps/dashboard/src/hooks/: index.ts  use-agent-stream.ts  use-live-metrics.ts  use-live-nadfun.ts  use-live-social.ts  use-live-trends.ts  use-metrics.ts  use-system-status.ts
apps/dashboard/src/lib/: live-data-client.ts  utils.ts
apps/dashboard/src/store/: app-store.ts
apps/dashboard/src/styles/: globals.css
apps/dashboard/src/types/: agent-events.ts  metrics.ts
contracts/neuro-core/: .gitignore  README.md  foundry.toml
contracts/neuro-core/script/: Deploy.s.sol
contracts/neuro-core/src/: NeuroAgent.sol
contracts/neuro-core/src/interfaces/: INeuroAgent.sol
contracts/neuro-core/test/: NeuroAgent.t.sol
docs/: AUDIT.md  SECURITY.md
scripts/: init-db.sql
services/execution/: README.md  package.json  tsup.config.ts
services/execution/src/: config.ts  index.ts
services/execution/src/client/: monad-client.ts
services/ingestion/: Cargo.toml  README.md
services/ingestion/benches/: pipeline_benchmark.rs
services/ingestion/src/: append_log.rs  checkpoint.rs  circuit_breaker.rs  config.rs  dedup.rs  error.rs  harvester.rs  http_client.rs  main.rs  metrics.rs
services/ingestion/src/message_bus/: mod.rs  nats_adapter.rs  redis_streams.rs
services/ingestion/src/pipeline/: mod.rs  stages.rs  worker.rs
services/ingestion/src/schemas/: agent_opinion.rs  audit_log_event.rs  common.rs  consensus_decision.rs  embedding_record.rs  execution_plan.rs  ingestion_event.rs  mod.rs  news_item.rs  social_signal.rs
services/ingestion/src/sources/: cryptopanic.rs  mod.rs  monad.rs  nadfun.rs  newsapi.rs  x_api.rs
services/ingestion/src/storage/: mod.rs
services/ingestion/tests/: integration_tests.rs
services/memory/: README.md  package.json  tsup.config.ts
services/memory/src/: embeddings.ts  index.ts  memory-manager.ts  vector-store.ts
services/orchestrator/: .env.example  README.md  package.json  tsup.config.ts
services/orchestrator/fixtures/: major_news.json  trap_test.json
services/orchestrator/src/: config.ts  daemon.ts  index.ts
services/verification/: README.md  package.json
services/verification/src/: cross-check-service.ts  index.ts  verification-manager.ts
(+169 files in other folders)
