[package]
name = "neuro-ingestion"
version = "0.1.0"
edition = "2021"
authors = ["NEURO Team"]
description = "High-speed market data and news harvesting for NEURO"
license = "MIT"

[[bin]]
name = "neuro-ingestion"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full", "tracing", "signal"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }

# Logging with structured tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
futures = "0.3"

# Hashing for deduplication
sha2 = "0.10"
hex = "0.4"

# Random for jitter
rand = "0.8"

# Rate limiting
governor = "0.7"

# Retry with exponential backoff + jitter
backoff = { version = "0.4", features = ["tokio"] }

# Async traits
async-trait = "0.1"

# S3-compatible storage
aws-config = "1.5"
aws-sdk-s3 = "1.65"
aws-credential-types = "1.2"

# WebSocket for real-time data
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# URL parsing
url = "2.5"

# Parking lot for faster mutexes
parking_lot = "0.12"

# Lazy initialization for statics
once_cell = "1.20"

# Prometheus metrics for monitoring
prometheus = { version = "0.13", features = ["process"] }

# Hyper for metrics HTTP server
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Message bus adapters
async-nats = "0.37"

# Tokio stream utilities
tokio-stream = { version = "0.1", features = ["sync"] }

# Pin utilities
pin-project-lite = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "pipeline_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
